motion features already obtained

--- a/notebooks/summe.ipynb
+++ b/notebooks/summe.ipynb
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
        "\"b'Air_Force_One'dasdas\""
       ]
      },
-     "execution_count": 76,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -399,10 +399,10 @@
        "       [0.00000000e+00, 0.00000000e+00, 1.11069101e-04, ...,\n",
        "        1.36979891e-03, 1.36739679e-03, 0.00000000e+00],\n",
        "       [0.00000000e+00, 0.00000000e+00, 1.44374644e-04, ...,\n",
-       "        2.81268102e-03, 8.94312747e-03, 0.00000000e+00]])"
+       "        2.81268102e-03, 8.94312747e-03, 0.00000000e+00]], dtype=float32)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -427,22 +427,22 @@
     {
      "data": {
       "text/plain": [
-       "array([[0.60040271, 0.61960006, 0.10456449, ..., 0.37872282, 0.60464656,\n",
-       "        0.41944176],\n",
-       "       [0.65370411, 0.80703062, 0.10086088, ..., 0.27387536, 0.4955928 ,\n",
-       "        0.38311753],\n",
-       "       [0.62495708, 0.79068941, 0.15495808, ..., 0.38076609, 0.54797375,\n",
-       "        0.44711748],\n",
+       "array([[0.60040295, 0.6195994 , 0.10456418, ..., 0.37872252, 0.6046463 ,\n",
+       "        0.4194402 ],\n",
+       "       [0.6537044 , 0.80703   , 0.10086098, ..., 0.2738752 , 0.49559346,\n",
+       "        0.3831161 ],\n",
+       "       [0.6249569 , 0.7906896 , 0.15495808, ..., 0.3807661 , 0.5479736 ,\n",
+       "        0.4471175 ],\n",
        "       ...,\n",
-       "       [0.32719967, 0.70716262, 0.08081598, ..., 0.39858565, 0.44998378,\n",
-       "        0.51151562],\n",
-       "       [0.39215091, 0.64381135, 0.08239483, ..., 0.33968228, 0.43223944,\n",
-       "        0.55292088],\n",
-       "       [0.34564772, 0.67439967, 0.09874789, ..., 0.47167143, 0.42363653,\n",
-       "        0.55294669]])"
+       "       [0.3271995 , 0.70716274, 0.08081631, ..., 0.3985857 , 0.44998354,\n",
+       "        0.5115157 ],\n",
+       "       [0.39215133, 0.64381117, 0.08239505, ..., 0.33968228, 0.4322401 ,\n",
+       "        0.552921  ],\n",
+       "       [0.34564832, 0.6743992 , 0.09874784, ..., 0.47167096, 0.4236364 ,\n",
+       "        0.55294657]], dtype=float32)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -499,9 +499,9 @@
        "       0.13333334, 0.2       , 0.2       , 0.2       , 0.26666668,\n",
        "       0.2       , 0.2       , 0.2       , 0.26666668, 0.26666668,\n",
        "       0.26666668, 0.26666668, 0.46666667, 0.46666667, 0.46666667,\n",
-       "       0.40000001, 0.40000001, 0.53333336, 0.73333335, 0.73333335,\n",
-       "       0.80000001, 0.80000001, 0.73333335, 0.73333335, 0.66666669,\n",
-       "       0.66666669, 0.66666669, 0.60000002, 0.53333336, 0.46666667,\n",
+       "       0.4       , 0.4       , 0.53333336, 0.73333335, 0.73333335,\n",
+       "       0.8       , 0.8       , 0.73333335, 0.73333335, 0.6666667 ,\n",
+       "       0.6666667 , 0.6666667 , 0.6       , 0.53333336, 0.46666667,\n",
        "       0.46666667, 0.53333336, 0.53333336, 0.33333334, 0.2       ,\n",
        "       0.2       , 0.06666667, 0.        , 0.        , 0.06666667,\n",
        "       0.06666667, 0.06666667, 0.06666667, 0.06666667, 0.06666667,\n",
@@ -526,17 +526,18 @@
        "       0.        , 0.        , 0.        , 0.        , 0.        ,\n",
        "       0.        , 0.06666667, 0.06666667, 0.13333334, 0.13333334,\n",
        "       0.13333334, 0.13333334, 0.13333334, 0.13333334, 0.2       ,\n",
-       "       0.26666668, 0.33333334, 0.40000001, 0.46666667, 0.40000001,\n",
-       "       0.40000001, 0.53333336, 0.53333336, 0.60000002, 0.60000002,\n",
-       "       0.60000002, 0.66666669, 0.60000002, 0.60000002, 0.53333336,\n",
-       "       0.46666667, 0.53333336, 0.53333336, 0.53333336, 0.40000001,\n",
+       "       0.26666668, 0.33333334, 0.4       , 0.46666667, 0.4       ,\n",
+       "       0.4       , 0.53333336, 0.53333336, 0.6       , 0.6       ,\n",
+       "       0.6       , 0.6666667 , 0.6       , 0.6       , 0.53333336,\n",
+       "       0.46666667, 0.53333336, 0.53333336, 0.53333336, 0.4       ,\n",
        "       0.33333334, 0.26666668, 0.26666668, 0.26666668, 0.26666668,\n",
        "       0.26666668, 0.2       , 0.2       , 0.2       , 0.2       ,\n",
        "       0.26666668, 0.2       , 0.13333334, 0.        , 0.        ,\n",
-       "       0.        , 0.        , 0.        , 0.        , 0.        ])"
+       "       0.        , 0.        , 0.        , 0.        , 0.        ],\n",
+       "      dtype=float32)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -578,52 +579,53 @@
        "       0.        , 0.        , 0.        , 0.        , 0.13333334,\n",
        "       0.13333334, 0.13333334, 0.33333334, 0.        , 0.        ,\n",
        "       0.        , 0.        , 0.        , 0.        , 0.2       ,\n",
-       "       0.2       , 0.2       , 0.2       , 0.66666669, 0.46666667,\n",
+       "       0.2       , 0.2       , 0.2       , 0.6666667 , 0.46666667,\n",
        "       0.33333334, 0.06666667, 0.06666667, 0.2       , 0.2       ,\n",
        "       0.53333336, 0.46666667, 0.13333334, 0.26666668, 0.26666668,\n",
        "       0.26666668, 0.26666668, 0.13333334, 0.46666667, 0.53333336,\n",
-       "       0.40000001, 0.33333334, 0.33333334, 0.33333334, 0.33333334,\n",
-       "       0.33333334, 0.60000002, 0.40000001, 0.40000001, 0.60000002,\n",
+       "       0.4       , 0.33333334, 0.33333334, 0.33333334, 0.33333334,\n",
+       "       0.33333334, 0.6       , 0.4       , 0.4       , 0.6       ,\n",
        "       0.33333334, 0.33333334, 0.33333334, 0.46666667, 0.46666667,\n",
-       "       0.46666667, 0.46666667, 1.13333333, 1.13333333, 0.86666667,\n",
-       "       0.80000001, 0.80000001, 1.26666665, 2.26666665, 2.26666665,\n",
-       "       2.4000001 , 2.4000001 , 2.4000001 , 2.4000001 , 2.0666666 ,\n",
-       "       2.0666666 , 1.73333335, 1.39999998, 1.20000005, 1.13333333,\n",
-       "       1.13333333, 1.5333333 , 1.5333333 , 0.93333334, 0.40000001,\n",
-       "       0.40000001, 0.13333334, 0.        , 0.        , 0.13333334,\n",
+       "       0.46666667, 0.46666667, 1.1333333 , 1.1333333 , 0.8666667 ,\n",
+       "       0.8       , 0.8       , 1.2666667 , 2.2666667 , 2.2666667 ,\n",
+       "       2.4       , 2.4       , 2.4       , 2.4       , 2.0666666 ,\n",
+       "       2.0666666 , 1.7333333 , 1.4       , 1.2       , 1.1333333 ,\n",
+       "       1.1333333 , 1.5333333 , 1.5333333 , 0.93333334, 0.4       ,\n",
+       "       0.4       , 0.13333334, 0.        , 0.        , 0.13333334,\n",
        "       0.13333334, 0.13333334, 0.13333334, 0.13333334, 0.13333334,\n",
-       "       0.13333334, 0.13333334, 0.13333334, 0.40000001, 0.40000001,\n",
-       "       0.40000001, 0.13333334, 0.13333334, 0.        , 0.        ,\n",
+       "       0.13333334, 0.13333334, 0.13333334, 0.4       , 0.4       ,\n",
+       "       0.4       , 0.13333334, 0.13333334, 0.        , 0.        ,\n",
        "       0.2       , 0.2       , 0.2       , 0.2       , 0.2       ,\n",
-       "       0.2       , 0.73333335, 0.73333335, 1.06666672, 0.53333336,\n",
+       "       0.2       , 0.73333335, 0.73333335, 1.0666667 , 0.53333336,\n",
        "       0.46666667, 0.46666667, 0.46666667, 0.        , 0.        ,\n",
        "       0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "       0.        , 0.        , 0.40000001, 0.40000001, 0.40000001,\n",
+       "       0.        , 0.        , 0.4       , 0.4       , 0.4       ,\n",
        "       0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "       0.        , 0.        , 0.60000002, 0.60000002, 0.        ,\n",
+       "       0.        , 0.        , 0.6       , 0.6       , 0.        ,\n",
        "       0.        , 0.2       , 0.2       , 0.2       , 0.2       ,\n",
-       "       0.60000002, 0.60000002, 0.2       , 0.2       , 0.26666668,\n",
-       "       0.26666668, 0.26666668, 0.26666668, 0.26666668, 0.60000002,\n",
-       "       0.60000002, 0.60000002, 0.33333334, 0.33333334, 0.06666667,\n",
+       "       0.6       , 0.6       , 0.2       , 0.2       , 0.26666668,\n",
+       "       0.26666668, 0.26666668, 0.26666668, 0.26666668, 0.6       ,\n",
+       "       0.6       , 0.6       , 0.33333334, 0.33333334, 0.06666667,\n",
        "       0.06666667, 0.06666667, 0.        , 0.        , 0.        ,\n",
        "       0.53333336, 0.53333336, 0.53333336, 0.53333336, 0.53333336,\n",
        "       0.53333336, 0.53333336, 0.        , 0.        , 0.        ,\n",
        "       0.        , 0.        , 0.        , 0.        , 0.        ,\n",
        "       0.        , 0.        , 0.        , 0.        , 0.        ,\n",
        "       0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "       0.        , 0.46666667, 0.46666667, 0.66666669, 0.66666669,\n",
-       "       0.66666669, 0.66666669, 0.66666669, 0.66666669, 1.33333337,\n",
-       "       1.4666667 , 1.79999995, 2.33333325, 2.5999999 , 1.93333328,\n",
-       "       1.79999995, 2.26666665, 2.13333344, 2.33333325, 2.33333325,\n",
-       "       2.33333325, 2.9333334 , 2.4666667 , 2.4666667 , 1.93333328,\n",
-       "       1.4666667 , 2.20000005, 2.66666675, 2.9333334 , 2.20000005,\n",
-       "       1.60000002, 1.39999998, 1.39999998, 1.86666667, 1.86666667,\n",
-       "       1.86666667, 1.60000002, 2.0666666 , 2.0666666 , 2.0666666 ,\n",
-       "       2.5999999 , 1.93333328, 1.20000005, 0.        , 0.        ,\n",
-       "       0.        , 0.        , 0.        , 0.        , 0.        ])"
+       "       0.        , 0.46666667, 0.46666667, 0.6666667 , 0.6666667 ,\n",
+       "       0.6666667 , 0.6666667 , 0.6666667 , 0.6666667 , 1.3333334 ,\n",
+       "       1.4666667 , 1.8       , 2.3333333 , 2.6       , 1.9333333 ,\n",
+       "       1.8       , 2.2666667 , 2.1333334 , 2.3333333 , 2.3333333 ,\n",
+       "       2.3333333 , 2.9333334 , 2.4666667 , 2.4666667 , 1.9333333 ,\n",
+       "       1.4666667 , 2.2       , 2.6666667 , 2.9333334 , 2.2       ,\n",
+       "       1.6       , 1.4       , 1.4       , 1.8666667 , 1.8666667 ,\n",
+       "       1.8666667 , 1.6       , 2.0666666 , 2.0666666 , 2.0666666 ,\n",
+       "       2.6       , 1.9333333 , 1.2       , 0.        , 0.        ,\n",
+       "       0.        , 0.        , 0.        , 0.        , 0.        ],\n",
+       "      dtype=float32)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -656,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -675,10 +677,10 @@
        "       ...,\n",
        "       [0., 0., 0., ..., 0., 0., 0.],\n",
        "       [0., 0., 0., ..., 0., 0., 0.],\n",
-       "       [0., 0., 0., ..., 0., 0., 0.]])"
+       "       [0., 0., 0., ..., 0., 0., 0.]], dtype=float32)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -690,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -709,10 +711,10 @@
        "       ...,\n",
        "       [0., 0., 0., ..., 0., 0., 0.],\n",
        "       [0., 0., 0., ..., 0., 0., 0.],\n",
-       "       [0., 0., 0., ..., 0., 0., 0.]])"
+       "       [0., 0., 0., ..., 0., 0., 0.]], dtype=float32)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -731,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -748,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
