pipeline processing datasets done

--- a/notebooks/summe.ipynb
+++ b/notebooks/summe.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "51\n"
+      "80\n"
      ]
     }
    ],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,17 +46,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_just_generated = \"/home/shuaman/video_sm/video_summarization/src/eccv16_dataset_summe_google_pool5.h5\"\n",
-    "# path_just_generated = \"/home/shuaman/video_sm/DSNet/src/custom_dataset.h5\""
+    "# path_just_generated = \"/home/shuaman/video_sm/video_summarization/src/eccv16_dataset_summe_google_pool5.h5\"\n",
+    "path_just_generated = \"/home/shuaman/video_sm/video_summarization/src/dataset_summe_processed.h5\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -292,13 +292,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -307,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +349,7 @@
        "\"b'Air_Force_One'dasdas\""
       ]
      },
-     "execution_count": 89,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +395,7 @@
        "        2.81268102e-03, 8.94312747e-03, 0.00000000e+00]], dtype=float32)"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +435,7 @@
        "        0.55294657]], dtype=float32)"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +530,7 @@
        "      dtype=float32)"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +618,7 @@
        "      dtype=float32)"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +673,7 @@
        "       [0., 0., 0., ..., 0., 0., 0.]], dtype=float32)"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -692,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +707,7 @@
        "       [0., 0., 0., ..., 0., 0., 0.]], dtype=float32)"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -819,7 +812,7 @@
        "       [4343, 4493]])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -831,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -876,7 +869,7 @@
        "       [4290, 4493]])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -895,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -913,7 +906,7 @@
        "        90,  57,  57, 151])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -925,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -943,7 +936,7 @@
        "        60,  45,  30, 204])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -962,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1005,7 +998,7 @@
        "       4455, 4470, 4485])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1017,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1060,7 +1053,7 @@
        "       4455, 4470, 4485])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1079,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1095,7 +1088,7 @@
        "array(300)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1107,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1123,7 +1116,7 @@
        "array(300)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1132,6 +1125,269 @@
     "print(\"n steps mine\", video_mine['n_steps'][...])\n",
     "video_mine['n_steps'][...]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Features rn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "features_rn (300, 2048)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.553214  , 1.0433971 , 0.17686886, ..., 0.22757362, 0.17993529,\n",
+       "        0.15754148],\n",
+       "       [1.4664332 , 0.91867656, 0.1971491 , ..., 0.146681  , 0.15695281,\n",
+       "        0.15399121],\n",
+       "       [1.4085724 , 1.0036256 , 0.17554843, ..., 0.1564687 , 0.19293553,\n",
+       "        0.12661326],\n",
+       "       ...,\n",
+       "       [1.6480883 , 0.93126017, 0.28589767, ..., 0.18681592, 0.05279017,\n",
+       "        0.12568223],\n",
+       "       [1.3323308 , 0.9370806 , 0.20901136, ..., 0.13248244, 0.10112174,\n",
+       "        0.14797312],\n",
+       "       [1.467631  , 0.9199308 , 0.25544664, ..., 0.20894413, 0.04304872,\n",
+       "        0.13302594]], dtype=float32)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(\"features_rn\", video_mine['features_rn'][...].shape)\n",
+    "video_mine['features_rn'][...]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Features iv3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "features_iv3 (300, 2048)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.2123444 , 0.10265401, 0.5933814 , ..., 0.06408942, 0.28995374,\n",
+       "        0.02610314],\n",
+       "       [0.22925717, 0.07883327, 0.5774565 , ..., 0.0565515 , 0.26946765,\n",
+       "        0.04212338],\n",
+       "       [0.2186742 , 0.07945208, 0.6102948 , ..., 0.0682413 , 0.4617673 ,\n",
+       "        0.03162527],\n",
+       "       ...,\n",
+       "       [0.1257004 , 0.0674344 , 0.5287319 , ..., 0.12259697, 0.24279273,\n",
+       "        0.07099366],\n",
+       "       [0.15925139, 0.12825727, 0.51982504, ..., 0.12426607, 0.26584625,\n",
+       "        0.04829269],\n",
+       "       [0.12718569, 0.08536585, 0.5659788 , ..., 0.0894424 , 0.32538795,\n",
+       "        0.08726561]], dtype=float32)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(\"features_iv3\", video_mine['features_iv3'][...].shape)\n",
+    "video_mine['features_iv3'][...]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Features RGB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "features_rgb (284, 1024)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.18277004, 0.36297646, 0.19101237, ..., 0.16239832, 0.10009131,\n",
+       "        0.5688848 ],\n",
+       "       [0.17924924, 0.34564123, 0.19322366, ..., 0.16493274, 0.04726471,\n",
+       "        0.561073  ],\n",
+       "       [0.18407334, 0.33687803, 0.18921451, ..., 0.14602208, 0.06858676,\n",
+       "        0.5090236 ],\n",
+       "       ...,\n",
+       "       [0.26326755, 0.30206656, 0.4950986 , ..., 0.23050138, 0.15183832,\n",
+       "        0.9113185 ],\n",
+       "       [0.21388046, 0.30657542, 0.43087044, ..., 0.26591438, 0.13105467,\n",
+       "        0.86740416],\n",
+       "       [0.24579467, 0.3135626 , 0.44443348, ..., 0.20072079, 0.12147023,\n",
+       "        0.8017538 ]], dtype=float32)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(\"features_rgb\", video_mine['features_rgb'][...].shape)\n",
+    "video_mine['features_rgb'][...]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Features flow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "features_flow (283, 1024)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.01151384, 0.        , 0.12933992, ..., 0.00129353, 0.00615711,\n",
+       "        0.        ],\n",
+       "       [0.0115771 , 0.        , 0.13019224, ..., 0.00138054, 0.00610545,\n",
+       "        0.        ],\n",
+       "       [0.01149878, 0.        , 0.1302803 , ..., 0.00124117, 0.00627856,\n",
+       "        0.        ],\n",
+       "       ...,\n",
+       "       [0.00916909, 0.        , 0.12460568, ..., 0.00336138, 0.01239733,\n",
+       "        0.        ],\n",
+       "       [0.00966319, 0.        , 0.12442445, ..., 0.00092948, 0.01424361,\n",
+       "        0.        ],\n",
+       "       [0.01009417, 0.        , 0.12393017, ..., 0.        , 0.01236412,\n",
+       "        0.        ]], dtype=float32)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(\"features_flow\", video_mine['features_flow'][...].shape)\n",
+    "video_mine['features_flow'][...]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Features 3D"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "features_3D (284, 2048)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.4449854 , 0.9193445 , 1.1335702 , ..., 0.9544895 , 1.4337481 ,\n",
+       "        1.0540646 ],\n",
+       "       [1.4518601 , 0.8628053 , 1.145373  , ..., 0.9640641 , 1.4517548 ,\n",
+       "        1.0513858 ],\n",
+       "       [1.4863772 , 0.9541082 , 1.1712774 , ..., 0.97754467, 1.4844178 ,\n",
+       "        1.0180126 ],\n",
+       "       ...,\n",
+       "       [1.7886964 , 1.0815017 , 1.3588434 , ..., 1.272493  , 1.0601312 ,\n",
+       "        0.8041955 ],\n",
+       "       [1.7182089 , 0.9637482 , 1.2734667 , ..., 1.2688806 , 1.1332318 ,\n",
+       "        0.8860184 ],\n",
+       "       [1.6690898 , 1.0206115 , 1.2163564 , ..., 1.2730519 , 1.2078952 ,\n",
+       "        0.87864125]], dtype=float32)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(\"features_3D\", video_mine['features_3D'][...].shape)\n",
+    "video_mine['features_3D'][...]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
