--- a/notebooks/vsumm_youtube.ipynb
+++ b/notebooks/vsumm_youtube.ipynb
@@ -33,7 +33,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_just_generated = \"/home/shuaman/video_sm/video_summarization/src/eccv16_dataset_youtube_google_pool5.h5\"\n"
+    "# path_just_generated = \"/home/shuaman/video_sm/video_summarization/src/eccv16_dataset_youtube_google_pool5.h5\"\n",
+    "path_just_generated = \"/home/shuaman/video_sm/video_summarization/src/dataset_youtube_processed.h5\""
    ]
   },
   {
@@ -1833,6 +1834,290 @@
     "print(\"n steps mine\", video_mine['n_steps'][...])\n",
     "video_mine['n_steps'][...]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Features rn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "features_rn (146, 2048)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.71511531, 0.06485288, 0.0638896 , ..., 0.95469522, 0.56251174,\n",
+       "        0.57087553],\n",
+       "       [0.69789821, 0.06702434, 0.06371719, ..., 1.10917819, 0.32317865,\n",
+       "        0.75849539],\n",
+       "       [0.78254682, 0.08371394, 0.07986345, ..., 1.14244437, 0.66674906,\n",
+       "        0.83435261],\n",
+       "       ...,\n",
+       "       [0.51331532, 0.04980703, 0.06310081, ..., 0.75368077, 0.2542994 ,\n",
+       "        0.50618345],\n",
+       "       [0.34196192, 0.07306229, 0.06567524, ..., 0.87150711, 0.29610679,\n",
+       "        0.51421213],\n",
+       "       [0.31442273, 0.04319201, 0.06076743, ..., 0.8455199 , 0.3720665 ,\n",
+       "        0.55019629]])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(\"features_rn\", video_mine['features_rn'][...].shape)\n",
+    "video_mine['features_rn'][...]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Features iv3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "features_iv3 (146, 2048)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[3.98206353e-01, 2.00700939e-01, 1.84082240e-01, ...,\n",
+       "        3.98107022e-02, 6.65887296e-02, 2.85191298e-01],\n",
+       "       [3.52928996e-01, 1.78393945e-01, 2.83144414e-01, ...,\n",
+       "        5.55645823e-02, 6.18357956e-02, 2.45385945e-01],\n",
+       "       [3.64014030e-01, 3.06907594e-01, 2.65186697e-01, ...,\n",
+       "        1.12055697e-01, 8.84462520e-02, 2.34728441e-01],\n",
+       "       ...,\n",
+       "       [1.20676674e-01, 2.20875800e-01, 2.99868695e-02, ...,\n",
+       "        1.35919917e-02, 5.48151834e-03, 9.47642028e-02],\n",
+       "       [1.29023135e-01, 2.17791170e-01, 2.57652774e-02, ...,\n",
+       "        2.04700567e-02, 3.12129239e-04, 5.66731542e-02],\n",
+       "       [1.90694690e-01, 1.51397184e-01, 6.90476149e-02, ...,\n",
+       "        2.79050656e-02, 1.95663385e-02, 1.23461075e-01]])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(\"features_iv3\", video_mine['features_iv3'][...].shape)\n",
+    "video_mine['features_iv3'][...]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Features RGB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "features_rgb (130, 1024)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.02239144, 0.09475365, 0.36987996, ..., 0.14193138, 0.91781342,\n",
+       "        0.43479955],\n",
+       "       [0.99051893, 0.1071737 , 0.44474044, ..., 0.18935044, 0.97954434,\n",
+       "        0.22186629],\n",
+       "       [1.00843334, 0.08791192, 0.46448237, ..., 0.14466675, 0.82539284,\n",
+       "        0.26764905],\n",
+       "       ...,\n",
+       "       [0.26584738, 0.1072012 , 0.21930064, ..., 0.12632759, 0.62150794,\n",
+       "        0.50906628],\n",
+       "       [0.28775185, 0.12233169, 0.1931383 , ..., 0.24250858, 0.57057983,\n",
+       "        0.49617204],\n",
+       "       [0.36067691, 0.12579411, 0.20414454, ..., 0.12504935, 0.62676823,\n",
+       "        0.35383326]])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(\"features_rgb\", video_mine['features_rgb'][...].shape)\n",
+    "video_mine['features_rgb'][...]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Features flow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "features_flow (129, 1024)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.40366983e-02, 0.00000000e+00, 1.39358625e-01, ...,\n",
+       "        0.00000000e+00, 8.99738744e-02, 0.00000000e+00],\n",
+       "       [1.61132179e-02, 0.00000000e+00, 1.39573723e-01, ...,\n",
+       "        2.60744267e-03, 4.26568240e-02, 0.00000000e+00],\n",
+       "       [1.38228899e-02, 0.00000000e+00, 1.33573949e-01, ...,\n",
+       "        1.20662933e-03, 7.09191896e-03, 0.00000000e+00],\n",
+       "       ...,\n",
+       "       [2.60481611e-02, 0.00000000e+00, 1.93053052e-01, ...,\n",
+       "        1.15041225e-03, 1.16451256e-01, 7.65278563e-03],\n",
+       "       [2.80995108e-02, 0.00000000e+00, 1.95912302e-01, ...,\n",
+       "        1.68760045e-04, 1.01454854e-01, 0.00000000e+00],\n",
+       "       [1.83466654e-02, 0.00000000e+00, 2.09819525e-01, ...,\n",
+       "        9.94437374e-04, 8.57571512e-02, 0.00000000e+00]])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(\"features_flow\", video_mine['features_flow'][...].shape)\n",
+    "video_mine['features_flow'][...]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Features 3D"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "features_3D (130, 2048)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[2.00838232, 0.18817014, 1.08919621, ..., 0.55932772, 0.25873041,\n",
+       "        0.40661752],\n",
+       "       [2.11291337, 0.18926652, 1.0041064 , ..., 0.55506998, 0.26807085,\n",
+       "        0.47319746],\n",
+       "       [2.24388933, 0.19824626, 1.0175283 , ..., 0.66117221, 0.23947836,\n",
+       "        0.53313738],\n",
+       "       ...,\n",
+       "       [2.34460402, 1.21669078, 1.27231264, ..., 0.63521028, 0.12973116,\n",
+       "        0.06679551],\n",
+       "       [2.10488081, 1.00556982, 1.19270277, ..., 0.58880442, 0.10537085,\n",
+       "        0.08183762],\n",
+       "       [2.07699704, 0.98862058, 0.99974483, ..., 0.58996546, 0.1587577 ,\n",
+       "        0.23049015]])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(\"features_3D\", video_mine['features_3D'][...].shape)\n",
+    "video_mine['features_3D'][...]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
