--- a/notebooks/pca_datasets.ipynb
+++ b/notebooks/pca_datasets.ipynb
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,6 +440,24 @@
     "    \"normalizer_flow\": normalizer_flow\n",
     "}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filename = \"transformations.pk\"\n",
+    "\n",
+    "pickle.dump(transformations, open(filename, 'wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
